// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scigateway Notification component Scigateway Notification error message renders correctly 1`] = `
<div
  className="root-class"
>
  <Memo(ForwardRef(HighlightOffIcon))
    className="errorIcon-class"
  />
  <WithStyles(ForwardRef(Typography))
    variant="body2"
  >
    error message
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Dismiss notification"
    className="button-class"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ClearIcon))
      className="deleteIcon-class"
    />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`Scigateway Notification component Scigateway Notification success message renders correctly 1`] = `
<div
  className="root-class"
>
  <Memo(ForwardRef(CheckCircleIcon))
    className="successIcon-class"
  />
  <WithStyles(ForwardRef(Typography))
    variant="body2"
  >
    success message
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Dismiss notification"
    className="button-class"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ClearIcon))
      className="deleteIcon-class"
    />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`Scigateway Notification component Scigateway Notification warning message renders correctly 1`] = `
<div
  className="root-class"
>
  <Memo(ForwardRef(ErrorOutlineIcon))
    className="warningIcon-class"
  />
  <WithStyles(ForwardRef(Typography))
    variant="body2"
  >
    warning message
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Dismiss notification"
    className="button-class"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ClearIcon))
      className="deleteIcon-class"
    />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
